# pass-it-on-release-monitor

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  renovate.json
.github/workflows/: docker-publish.yaml  release.yml  test.yml
src/: cli.rs  configuration.rs  database.rs  download.rs  error.rs  main.rs  models.rs  monitors.rs  ui.rs  webpage.rs
src/database/: m20250519_000001_create_monitor_table.rs  m20250519_000001_create_version_table.rs  monitors.rs  queries.rs  version.rs
src/models/: rancher_channel_server.rs
src/monitors/: github_release.rs  rancher_channel_server.rs
src/ui/: handlers.rs  pages.rs
src/ui/handlers/: add.rs  edit.rs  index.rs
src/ui/pages/: add_page.rs  edit_page.rs  index_page.rs
src/webpage/: add_page.rs  common_page.rs  edit_page.rs  handlers.rs  index_page.rs
src/webpage/handlers/: add.rs  edit.rs  index.rs
