[package]
name = "pass-it-on-release-monitor"
version = "0.3.1"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me>"]
edition = "2024"
rust-version = "1.85"
description = "A pass-it-on client to send notifications when a configured monitor detects a new version has been released"
homepage = "https://github.com/kwheelans/pass-it-on-release-monitor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kwheelans/pass-it-on-release-monitor"

[features]
rustls-tls-native-roots = ["pass-it-on/rustls-tls-native-roots"]

[dependencies]
async-trait = "0.1"
clap = {version = "4", features = ["derive"]}
octocrab = "0.44"
pass-it-on = { version = "0.16", features = ["client", "http-client", "parse-cfg"], default-features = false}
reqwest = { version = "0.12",  features = ["charset", "http2", "macos-system-configuration", "json", "rustls-tls"], default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
typetag = "0.2"

[profile.release]
lto = true
codegen-units = 1
