[package]
name = "pass-it-on-release-monitor"
version = "0.5.0"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me>"]
edition = "2024"
rust-version = "1.90"
description = "A pass-it-on client to send notifications when a configured monitor detects a new version has been released"
homepage = "https://github.com/kwheelans/pass-it-on-release-monitor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kwheelans/pass-it-on-release-monitor"

[features]
rustls-tls-native-roots = ["pass-it-on/rustls-tls-native-roots"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8" }
clap = {version = "4", features = ["derive"]}
chrono = { version = "0.4"}
maud = { version = "0.27", features = ["axum"]}
octocrab = "0.48.0"
pass-it-on = { version = "0.16", features = ["client", "http-client", "parse-cfg"], default-features = false}
reqwest = { version = "0.12",  features = ["charset", "http2", "macos-system-configuration", "json", "rustls-tls"], default-features = false }
sea-orm = { version = "2.0.0-rc.21", features = ["runtime-tokio-rustls", "sqlx-sqlite", "entity-registry", "schema-sync", "with-chrono"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"]}
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = "0.3"
typetag = "0.2"
zip = { version = "7", default-features = false, features = ["deflate-flate2","deflate-flate2-zlib-rs"]}

[profile.release]
lto = true
codegen-units = 1
